[project]
name = "ragleakguard"
version = "0.1.0"
description = "Scan your AI's vector database for exposed sensitive data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Belle" }]
keywords = ["llm", "rag", "vector-database", "security", "pii", "privacy", "ai-security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5"]
pinecone = ["pinecone-client>=4"]
# Python 3.9: pin spaCy<3.8 + numpy<2 so prebuilt wheels exist (newer spaCy needs a source build)
detect = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7,<3.8", "numpy<2"]
dev = ["pytest>=8", "faker>=25"]

[project.urls]
Homepage = "https://github.com/Agenvana/RAGLeakGuard"
Repository = "https://github.com/Agenvana/RAGLeakGuard"
Issues = "https://github.com/Agenvana/RAGLeakGuard/issues"

[project.scripts]
ragleakguard = "ragleakguard.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragleakguard"]
